--- a/css/common.css
+++ b/css/common.css
@@ -1,51 +1,58 @@
-@charset "UTF-8";
+html {
+  font-size: 62.5%;
+}
+
+ul {
+  list-style: none;
+}
+
 html, body {
   height: 100%;
 }
 
 body {
-  padding-top: 45px;
-  padding-bottom: 50px;
+  padding-top: 4.5rem;
+  padding-bottom: 5rem;
 }
 
-.pyg_view {
+.pyg-main {
   height: 100%;
   overflow: scroll;
 }
 
-.pyg_header {
+.pyg-header {
   width: 100%;
-  /* 
-     块级元素加上 固定或者绝对定位之后 宽度？？
-     默认 100% 
-     变成了由内容来撑开！！！！
-
-      */
-  height: 45px;
+  height: 4.5rem;
   position: fixed;
   top: 0;
   left: 0;
   background-color: #fff;
-  padding: 5px;
+  padding: 0.5rem;
 }
 
-.pyg_footer {
+.pyg-footer {
   width: 100%;
-  height: 50px;
+  height: 5rem;
   position: fixed;
   bottom: 0;
   left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  background-color: #fff;
 }
 
-/* 
-1 效果：
-     1 头部 和尾部 
-          固定定位 写死 宽100% 和 高度 50px top:0 bottom:0
-     2 内容标签 pyg_view
-          height: 100% 
-          overflow:scroll;
-     3 html和body必须要加上 100% 
-          body padding-top:头部标签的高度
-          body padding-bottom:尾部标签的高度
- */
+.pyg-footer > a {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  color: #333;
+  font-size: 2.2rem;
+  padding-top: 0.5rem;
+}
+
+.pyg-footer > a > div {
+  font-size: 1.2rem;
+}
 /*# sourceMappingURL=common.css.map */
