--- a/css/common.scss
+++ b/css/common.scss
@@ -4,10 +4,13 @@
 //      // 内减模式 
 //      box-sizing: border-box;
 // }
+html {
+     font-size: 62.5%;
+ }
 
-// ul {
-//      list-style: none;
-// }
+ul {
+     list-style: none;
+}
 
 // img {
 //      // 宽度由父盒子来控制 
@@ -34,49 +37,40 @@ html,body{
      height: 100%;   
 }
 body{
-     padding-top: 45px;
-     padding-bottom: 50px;
+     padding-top: 4.5rem;
+     padding-bottom: 5rem;
 }
-.pyg_view{
+.pyg-main{
    
      height: 100%;
      overflow: scroll;
-     // 高度 = 屏幕的高度 - 头部的高度 - 尾部的高度！！
-     // html 和body标签的高度 = 100%   pyg_view 高度 =100%
-     // 在body 添加属性 padding-top:头部标签的高度 padding-bottom :尾部的高度
-     // 里面的内容 肯定是超过 pyg_view标签的高度 否则出现滚动条
 }
-.pyg_header{
+.pyg-header{
      width: 100%;
-     /* 
-     块级元素加上 固定或者绝对定位之后 宽度？？
-     默认 100% 
-     变成了由内容来撑开！！！！
-
-      */
-     height: 45px;
+     height: 4.5rem;
      position: fixed;
      top: 0;
      left: 0;
      background-color: #fff;
-     padding: 5px;
+     padding: 0.5rem;
 }
-.pyg_footer{
+.pyg-footer{
      width: 100%;
-     height: 50px;
+     height: 5rem;
      position: fixed;
      bottom: 0;
      left: 0;
-}
+     display: flex;
+     text-align: center;
+     background-color: #fff;
 
-/* 
-1 效果：
-     1 头部 和尾部 
-          固定定位 写死 宽100% 和 高度 50px top:0 bottom:0
-     2 内容标签 pyg_view
-          height: 100% 
-          overflow:scroll;
-     3 html和body必须要加上 100% 
-          body padding-top:头部标签的高度
-          body padding-bottom:尾部标签的高度
- */
+     >a{
+          flex: 1;
+          color: #333;
+          font-size: 2.2rem;
+          padding-top: 0.5rem;
+          >div{
+               font-size: 1.2rem;
+          }
+     }
+}
