--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,20 @@
-/* No CSS *//*# sourceMappingURL=index.css.map */
+.main {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main .left {
+  width: 100px;
+  background-color: green;
+}
+
+.main .right {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  background-color: blue;
+}
+/*# sourceMappingURL=index.css.map */
