--- a/css/common.scss
+++ b/css/common.scss
@@ -32,7 +32,10 @@ ul {
 // // 
 
 
-
+*{
+     padding: 0;
+     margin: 0;
+}
 html,body{
      height: 100%;   
 }
@@ -40,8 +43,7 @@ body{
      padding-top: 4.5rem;
      padding-bottom: 5rem;
 }
-.pyg-main{
-   
+.pyg-main{  
      height: 100%;
      overflow: scroll;
 }
