--- a/css/index.css
+++ b/css/index.css
@@ -1,20 +1,82 @@
-.main {
+.pyg-cates {
   width: 100%;
-  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.main .left {
-  width: 100px;
-  background-color: green;
-}
-
-.main .right {
+.pyg-cates > a {
+  width: 100%;
+  padding: 1rem;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  background-color: blue;
+}
+
+.pyg-cates > a > img {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.pro-list {
+  padding: 0.5rem;
+}
+
+.pro-list .pyg-goodslist .goodsTitle > img {
+  display: block;
+  width: 100%;
+}
+
+.pro-list .pyg-goodslist > ul {
+  margin: 0.5rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.pro-list .pyg-goodslist > ul > li {
+  width: 49%;
+  background-color: #fff;
+  margin-bottom: 0.5rem;
+}
+
+.pro-list .pyg-goodslist > ul > li a:nth-of-type(1) > img {
+  display: block;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.pro-list .pyg-goodslist > ul > li a:nth-of-type(1) .goodsName {
+  padding: 0 0.5rem;
+  font-size: 1.2rem;
+  color: #333;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+
+.pro-list .pyg-goodslist > ul > li a:nth-of-type(1) .goodsPrice {
+  color: red;
+  font-size: 1.5rem;
+}
+
+.pro-list .pyg-goodslist > ul > li a:nth-of-type(2) {
+  display: block;
+  width: 100%;
+}
+
+.pro-list .pyg-goodslist > ul > li a:nth-of-type(2) .mui-btn {
+  display: block;
+  width: 60%;
+  margin: 0 auto;
+  margin-bottom: 0.5rem;
 }
 /*# sourceMappingURL=index.css.map */
