--- a/css/category.css
+++ b/css/category.css
@@ -1,12 +1,17 @@
 .pyg-main {
+  padding-left: 10rem;
   width: 100%;
   background-color: #fff;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
 .pyg-main .left-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 10rem;
   height: 100%;
   overflow: scroll;
@@ -24,8 +29,38 @@
 }
 
 .pyg-main .right-list {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  height: 100%;
+  overflow: scroll;
+}
+
+.pyg-main .right-list .goodstitle {
+  line-height: 4rem;
+  color: #0094ff;
+  font-size: 1.4rem;
+  padding-left: 1rem;
+}
+
+.pyg-main .right-list .goodslist > ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.pyg-main .right-list .goodslist > ul > li {
+  width: 33.33%;
+}
+
+.pyg-main .right-list .goodslist > ul > li > a > img {
+  display: block;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.pyg-main .right-list .goodslist > ul > li > a > div {
+  text-align: center;
+  color: #333;
+  font-size: 1.5rem;
 }
 /*# sourceMappingURL=category.css.map */
