--- a/css/category.scss
+++ b/css/category.scss
@@ -11,7 +11,7 @@
          left: 0;
          width: 10rem;
          height: 100%;
-         overflow: scroll;
+         overflow: hidden;
          background-color: #eee;
          >ul{
              >li{
@@ -26,7 +26,7 @@
      }
      .right-list{
          height: 100%;
-         overflow: scroll;
+         overflow: hidden;
 
          .goodstitle{
              line-height: 4rem;
