--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,5 @@
-html {
-  font-size: 62.5%;
+body {
+  line-height: normal;
 }
 
 ul {
@@ -16,8 +16,8 @@ html, body {
 }
 
 body {
-  padding-top: 4.5rem;
-  padding-bottom: 5rem;
+  padding-top: 0.45rem;
+  padding-bottom: 0.55rem;
 }
 
 .pyg-main {
@@ -27,17 +27,17 @@ body {
 
 .pyg-header {
   width: 100%;
-  height: 4.5rem;
+  height: 0.45rem;
   position: fixed;
   top: 0;
   left: 0;
   background-color: #fff;
-  padding: 0.5rem;
+  padding: 0.05rem;
 }
 
 .pyg-footer {
   width: 100%;
-  height: 5rem;
+  height: 0.55rem;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -53,11 +53,11 @@ body {
       -ms-flex: 1;
           flex: 1;
   color: #333;
-  font-size: 2.2rem;
-  padding-top: 0.5rem;
+  font-size: 0.22rem;
+  padding-top: 0.1rem;
 }
 
 .pyg-footer > a > div {
-  font-size: 1.2rem;
+  font-size: 0.12rem;
 }
 /*# sourceMappingURL=common.css.map */
