--- a/css/common.scss
+++ b/css/common.scss
@@ -4,10 +4,10 @@
 //      // 内减模式 
 //      box-sizing: border-box;
 // }
-html {
-     font-size: 62.5%;
- }
 
+body{
+     line-height: normal;
+}
 ul {
      list-style: none;
 }
@@ -40,8 +40,8 @@ html,body{
      height: 100%;   
 }
 body{
-     padding-top: 4.5rem;
-     padding-bottom: 5rem;
+     padding-top: 0.45rem;
+     padding-bottom: 0.55rem;
 }
 .pyg-main{  
      height: 100%;
@@ -49,16 +49,16 @@ body{
 }
 .pyg-header{
      width: 100%;
-     height: 4.5rem;
+     height: 0.45rem;
      position: fixed;
      top: 0;
      left: 0;
      background-color: #fff;
-     padding: 0.5rem;
+     padding: 0.05rem;
 }
 .pyg-footer{
      width: 100%;
-     height: 5rem;
+     height: 0.55rem;
      position: fixed;
      bottom: 0;
      left: 0;
@@ -69,10 +69,10 @@ body{
      >a{
           flex: 1;
           color: #333;
-          font-size: 2.2rem;
-          padding-top: 0.5rem;
+          font-size: 0.22rem;
+          padding-top: 0.1rem;
           >div{
-               font-size: 1.2rem;
+               font-size: 0.12rem;
           }
      }
 }
