--- a/css/category.css
+++ b/css/category.css
@@ -1,5 +1,5 @@
 .pyg-main {
-  padding-left: 0.8rem;
+  padding-left: 1rem;
   background-color: #fff;
   position: relative;
 }
@@ -8,7 +8,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 0.8rem;
+  width: 1rem;
   height: 100%;
   overflow: hidden;
   background-color: #eee;
@@ -26,6 +26,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  font-size: 0.16rem;
 }
 
 .pyg-main .left-nav > ul .active {
