--- a/css/category.scss
+++ b/css/category.scss
@@ -1,13 +1,13 @@
  // 分类页内容块
  .pyg-main{
-     padding-left: 0.8rem;
+     padding-left: 1rem;
      background-color: #fff;
      position: relative;
      .left-nav{
          position: absolute;
          top: 0;
          left: 0;
-         width: 0.8rem;
+         width: 1rem;
          height: 100%;
          overflow: hidden;
          background-color: #eee;
@@ -18,6 +18,7 @@
                  height: 0.4rem;
                  align-items: center;
                  justify-content: center;
+                 font-size: 0.16rem;
              }
              .active{
                  border-left: 0.04rem solid #0094ff;
