--- a/css/goods-detail.css
+++ b/css/goods-detail.css
@@ -39,4 +39,73 @@ body {
       -ms-flex: 3;
           flex: 3;
 }
+
+.detail-tab .tab-content #item2 ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  padding: 5px;
+}
+
+.detail-tab .tab-content #item2 ul li {
+  background-color: #efeff4;
+}
+
+.detail-tab .tab-content #item2 ul li .item_title {
+  font-size: 16px;
+  border-bottom: 1px solid #666;
+  padding: 5px;
+}
+
+.detail-tab .tab-content #item2 ul li .item_content {
+  padding: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 13px;
+}
+
+.detail-tab .tab-content #item2 ul li .item_content span:nth-child(1) {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.detail-tab .tab-content #item2 ul li .item_content span:nth-child(2) {
+  -webkit-box-flex: 4;
+      -ms-flex: 4;
+          flex: 4;
+}
+
+.pyg-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.pyg-footer > a {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  border-right: 1px solid #ddd;
+}
+
+.pyg-footer > a:nth-of-type(-n+2) {
+  color: #555;
+}
+
+.pyg-footer > a:nth-last-of-type(-n+2) {
+  padding: 0;
+  font-size: 0.15rem;
+  line-height: 0.55rem;
+  color: #fff;
+}
+
+.pyg-footer > a:nth-last-of-type(1) {
+  background-color: red;
+}
+
+.pyg-footer > a:nth-last-of-type(2) {
+  background-color: yellowgreen;
+}
 /*# sourceMappingURL=goods-detail.css.map */
