--- a/css/goods-detail.scss
+++ b/css/goods-detail.scss
@@ -30,3 +30,62 @@ body{
             }
         }
 }
+// tab2
+// tab 选项卡
+.detail-tab{
+    .tab-content{
+      #item2{
+        ul{
+       
+          list-style: none;
+          margin: 0;
+          padding: 0;
+          padding: 5px;
+          li{
+            background-color: rgb(239, 239, 244);
+            .item_title{
+              font-size: 16px;
+              border-bottom: 1px solid #666;
+              padding: 5px;
+            }
+            .item_content{
+              padding: 5px;
+
+              display: flex;
+              font-size: 13px;
+              span:nth-child(1){
+                flex: 1;  
+              }
+              span:nth-child(2){
+                flex: 4;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  // 尾部样式
+  .pyg-footer{
+      display: flex;
+      >a{
+        flex: 1;
+        border-right: 1px solid #ddd;
+      }
+      >a:nth-of-type(-n+2){
+          color: #555;
+      }
+      >a:nth-last-of-type(-n+2){
+          padding: 0;
+          font-size: 0.15rem;
+          line-height: 0.55rem;
+          color: #fff;
+      }
+      >a:nth-last-of-type(1){
+          background-color: red;
+      }
+      >a:nth-last-of-type(2){
+        background-color: yellowgreen;
+    }
+  }
