--- a/css/cart.scss
+++ b/css/cart.scss
@@ -89,7 +89,7 @@
       padding: 0.1rem 0;
   
   
-      .order_warp {
+      .order_wrap {
         list-style: none;
         margin: 0;
         padding: 0;
