购物车删改完成，添加登录认证

--- a/css/cart.css
+++ b/css/cart.css
@@ -156,6 +156,10 @@
   -webkit-box-orient: vertical;
 }
 
+body {
+  display: none;
+}
+
 #cart_body .delete_btn,
 #cart_body .goods_chk_wrap,
 #cart_body .goods_num_tool {
